bugfix: hero-video no longer covers nav-buttons

--- a/kartenwerk/static/kartenwerk/css/main.css
+++ b/kartenwerk/static/kartenwerk/css/main.css
@@ -305,6 +305,7 @@ a {
   color: var(--color-light);
   position: fixed;
   width: 100%;
+  z-index: +1;
 }
 
 .site-head :focus {
